# sidekick

./: Cargo.toml  README.md
examples/: basic.rs  keyboard_input.rs  mouse_input.rs  pong.rs
src/: app.rs  debug.rs  input.rs  lib.rs  main.rs  time.rs
src/components/: transform.rs
src/entities/: circle.rs  game_object.rs  game_view.rs  line.rs  mod.rs  rectangle.rs  triangle.rs
src/rendering/: vertex.rs
src/types/: color.rs  color32.rs  font.rs  mod.rs  vector2.rs
