[package]
name = "sidekick"
version = "0.1.0"
authors = ["Thai Duong Vu <vu.t.duong01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sidekick"

[dependencies]
rand = "0.8.4"
glutin = "0.26.0"
crossterm = "0.19.0"
rgx = { version = "0.8.1", features = ["renderer"] }
